--- a/index.hbs
+++ b/index.hbs
@@ -25,10 +25,15 @@ into the {body} of the default.hbs template --}}
 
         <div class="post-feed">
             {{#foreach posts}}
-
-                {{!-- The tag below includes the markup for each post - partials/post-card.hbs --}}
-                {{> "post-card"}}
-
+                {{#if featured }}
+                    <section class="featured-full-content">
+                        {{ content }}
+                    </section>
+                {{/if}}
+                {{#unless featured}}
+                    {{!-- The tag below includes the markup for each post - partials/post-card.hbs --}}
+                    {{> "post-card"}}
+                {{/unless}}
             {{/foreach}}
         </div>
 
