--- a/default.hbs
+++ b/default.hbs
@@ -12,6 +12,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     {{!-- Styles'n'Scripts --}}
+
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:400i|Open+Sans:400|Roboto+Slab:700" rel="stylesheet">
+
     <link rel="stylesheet" type="text/css" href="{{asset "built/screen.css"}}" />
 
     {{!-- This tag outputes SEO meta+structured data and other important settings --}}
