--- a/default.hbs
+++ b/default.hbs
@@ -1,24 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-    {{!-- Document Settings --}}
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-
-    {{!-- Base Meta --}}
     <title>{{meta_title}}</title>
     <meta name="HandheldFriendly" content="True" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    {{!-- Styles'n'Scripts --}}
-
-    <link href="https://fonts.googleapis.com/css?family=Merriweather:400i|Open+Sans:400|Roboto+Slab:700" rel="stylesheet">
-
-    <link rel="stylesheet" type="text/css" href="{{asset "built/screen.css"}}" />
-
-    {{!-- This tag outputes SEO meta+structured data and other important settings --}}
+    {{!-- Ghost Generated Headers --}}
     {{ghost_head}}
+
+    {{!-- Stylesheets --}}
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Fira+Sans+Condensed:300,300i,500,900|Zilla+Slab:300,700">
+    <link rel="stylesheet" type="text/css" href="{{asset "built/main.css"}}" />
 
 </head>
 <body class="{{body_class}}">
@@ -58,19 +51,19 @@
     {{/if}}
 
     {{!-- jQuery + Fitvids, which makes all video embeds responsive --}}
-    <script
-        src="https://code.jquery.com/jquery-3.2.1.min.js"
-        integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-        crossorigin="anonymous">
-    </script>
-    <script type="text/javascript" src="{{asset "js/jquery.fitvids.js"}}"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="{{asset "js/vendors/jquery.fitvids.js"}}"></script>
 
+    {{!-- Pagination --}}
     {{#if pagination.pages}}
     <script>
         var maxPages = parseInt('{{pagination.pages}}');
     </script>
-    <script src="{{asset "js/infinitescroll.js"}}"></script>
+    <script type="text/javascript" src="{{asset "js/vendors/infinitescroll.js"}}"></script>
     {{/if}}
+
+    {{!-- Concatenated Site Scripts --}}
+    <script type="text/javascript" src="{{asset "built/app.js"}}"></script>
 
     {{!-- The #block helper will pull in data from the #contentFor other template files. In this case, there's some JavaScript which we only want to use in post.hbs, but it needs to be included down here, after jQuery has already loaded. --}}
     {{{block "scripts"}}}
