--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -2,6 +2,7 @@ body, html {
   width: 100%;
   height: 100%;
   font-family: $sans-font;
+  font-weight: 400;
   font-size: 100%;
   background-color: $off-white;
   font-smooth: always;
@@ -10,10 +11,29 @@ body, html {
 }
 
 section {}
-h1 {}
-h2 {}
+
+h1 {
+    font-weight: 900;
+    font-size: 2.4rem;
+    text-transform: uppercase;
+}
+h2 {
+    font-weight: 700;
+    letter-spacing: -1.5px;
+    font-size: 2rem;
+    font-family: $serif-font;
+}
 h3 {}
 h4 {}
+
+a, a:hover, a:visited {
+    text-decoration: none;
+}
+
+.red-highlight {
+    color: $primary-red;
+    font-weight: 700;
+}
 
 
 
@@ -105,267 +125,9 @@ h4 {}
 }
 
 
-/* 4. Site Header
-/* ---------------------------------------------------------- */
-
-.site-header {
-  position: relative;
-  padding-top: 12px;
-  padding-bottom: 12px;
-  color: $primary-white;
-  background: $dark-grey no-repeat center center;
-  background-size: cover;
-}
-
-.site-header:before {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 10;
-  display: block;
-  background: rgba(0,0,0,0.18);
-}
-
-.site-header:after {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: auto;
-  left: 0;
-  z-index: 10;
-  display: block;
-  height: 80px;
-  background: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0));
-}
-
-.site-header.no-cover:before,
-.site-header.no-cover:after {
-  display: none;
-}
-
-.site-header-content {
-  display: flex;
-  flex-direction: column;
-  justify-content: left;
-  align-items: left;
-  max-height: 450px;
-  padding: 2vw 0vw;
-  text-align: center;
-}
-
-.site-title {
-  z-index: 10;
-  margin: 0;
-  padding: 0;
-  font-size: 3.8rem;
-  font-weight: 700;
-}
-
-.site-logo {
-  max-height: 45px;
-}
-
-.site-description {
-  z-index: 10;
-  margin: 0;
-  padding: 5px 0;
-  font-size: 2.2rem;
-  font-weight: 300;
-  letter-spacing: 0.5px;
-  opacity: 0.8;
-}
-
-@media (max-width: 500px) {
-  .site-title {
-      font-size: 3rem;
-  }
-  .site-description {
-      font-size: 1.8rem;
-  }
-}
 
 
-/* 5. Site Navigation
-/* ---------------------------------------------------------- */
 
-.site-nav {
-  position: relative;
-  z-index: 300;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  // font-size: 1.2rem;
-}
-
-.site-nav-left {
-  display: flex;
-  align-items: center;
-  overflow-x: auto;
-  overflow-y: hidden;
-  margin-right: 10px;
-  letter-spacing: 0.4px;
-  white-space: nowrap;
-  -webkit-overflow-scrolling: touch;
-  -ms-overflow-scrolling: touch;
-}
-
-/* Site Nav Hack Explanation (above):
-
-What's happening above it .site-nav-left is set to overflow-x and allow sideways scrolling, so that when there isn't enough space for all nav items (either due to lots of nav items, or a small viewport), you can still scroll side-to-side to reach them.
-
-The knock-on effect of this is ugly browser-scroll bars at the bottom, so 80px of padding-bottom and a 40px fixed height parent (.site-nav) hides that entirely. Slightly hacky code. But nice clean end-result.
-
-*/
-
-.site-nav-logo {
-  flex-shrink: 0;
-  display: block;
-  margin-right: 24px;
-  padding: 11px 0;
-  font-size: 1.7rem;
-  line-height: 1em;
-  font-weight: bold;
-  letter-spacing: -0.5px;
-}
-
-.site-nav-logo:hover {
-  text-decoration: none;
-}
-
-.site-nav-logo img {
-  display: block;
-  width: auto;
-  height: 21px;
-}
-
-.nav {
-  display: flex;
-  padding: 0;
-  list-style: none;
-  margin: 0;
-}
-
-.nav li {
-  display: block;
-  margin: 0;
-  padding: 0;
-}
-
-.nav li a {
-  display: block;
-  margin: 0;
-  padding: 10px 12px;
-  font-size: 2rem;
-  color: $primary-white;
-  transition: 3s background-color;
-}
-
-
-.nav li a:hover {
-  opacity: 1;
-  background-color: $primary-red;
-  text-decoration: none;
-}
-
-.site-nav-right {
-  flex-shrink: 0;
-  display: flex;
-  align-items: center;
-  height: 40px;
-}
-
-.social-links {
-  flex-shrink: 0;
-  display: flex;
-  align-items: center;
-}
-
-.social-links a:last-of-type {
-  padding-right: 20px;
-}
-
-.social-link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0;
-  padding: 10px;
-  color: #fff;
-  opacity: 0.8;
-}
-
-.social-link:hover {
-  opacity: 1;
-}
-
-.social-link svg {
-  height: 1.8rem;
-  fill: #fff;
-}
-
-.social-link-fb svg {
-  height: 1.5rem;
-}
-
-.social-link-wb svg {
-  height: 1.6rem;
-}
-
-.social-link-wb svg path {
-  stroke: #fff;
-}
-
-.social-link-rss svg {
-  height: 1.9rem;
-}
-
-.subscribe-button {
-  display: block;
-  padding: 4px 10px;
-  border: #fff 1px solid;
-  color: #fff;
-  font-size: 1.2rem;
-  line-height: 1em;
-  border-radius: 10px;
-  opacity: 0.8;
-}
-
-.subscribe-button:hover {
-  text-decoration: none;
-  opacity: 1;
-}
-
-.rss-button {
-  opacity: 0.8;
-}
-
-.rss-button:hover {
-  opacity: 1;
-}
-
-.rss-button svg {
-  height: 2.1rem;
-  margin-bottom: 1px;
-  fill: #fff;
-}
-
-@media (max-width: 700px) {
-  .site-header {
-      padding-right: 0;
-      padding-left: 0;
-  }
-  .site-nav-left {
-      margin-right: 0;
-      padding-left: 4vw;
-  }
-  .site-nav-right {
-      display: none;
-  }
-}
 
 
 /* 6. Post Feed
@@ -491,9 +253,7 @@ The first (most recent) post in the list is styled to be bigger than the others 
       flex: 0 1 357px;
   }
 
-  .home-template .post-feed .post-card:nth-child(6n+1):not(.no-image) h2 {
-      font-size: 2.6rem;
-  }
+
 
   .home-template .post-feed .post-card:nth-child(6n+1):not(.no-image) p {
       font-size: 1.8rem;
@@ -834,37 +594,14 @@ Usage (In Ghost editor):
   transform: rotate(45deg);
 }
 
-.post-full-content h1,
-.post-full-content h2,
-.post-full-content h3,
-.post-full-content h4,
-.post-full-content h5,
-.post-full-content h6 {
-  color: color($dark-grey l(-5%));
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
+
 
 .post-full-content h1 {
   margin: 0.5em 0 0.2em 0;
   font-size: 4.6rem;
   font-weight: 700;
 }
-@media (max-width: 500px) {
-  .post-full-content h1 {
-      font-size: 2.8rem;
-  }
-}
 
-.post-full-content h2 {
-  margin: 0.5em 0 0.2em 0;
-  font-size: 3.6rem;
-  font-weight: 700;
-}
-@media (max-width: 500px) {
-  .post-full-content h2 {
-      font-size: 2.6rem;
-  }
-}
 
 .post-full-content h3 {
   margin: 0.5em 0 0.2em 0;
