--- a/assets/built/main.css
+++ b/assets/built/main.css
@@ -66,6 +66,12 @@ body, html {
   -moz-osx-font-smoothing: grayscale;
 }
 
+section {
+  width: 100%;
+  max-width: 1000px;
+  margin: 20px auto;
+}
+
 h1 {
   font-weight: 900;
   font-size: 2.4rem;
@@ -79,6 +85,17 @@ h2 {
   font-family: "Zilla Slab", "Georgia", "Serif";
 }
 
+p {
+  text-align: justify;
+  font-size: 1.2rem;
+  line-height: 1.6rem;
+}
+
+i {
+  font-weight: 300;
+  font-style: italic;
+}
+
 a, a:hover, a:visited {
   text-decoration: none;
 }
@@ -86,6 +103,11 @@ a, a:hover, a:visited {
 .red-highlight {
   color: #ee3532;
   font-weight: 700;
+}
+
+/* -- temp --*/
+.featured-post {
+  margin: 0px 20px 40px;
 }
 
 /* ---------------------------------------
