--- a/partials/custom-header.hbs
+++ b/partials/custom-header.hbs
@@ -10,7 +10,7 @@
     </div>
     <div class="site-subnav">
         <ul class="subnav">
-            <li><a href="#">who we are</a> <span class="subnav-divider">|</span></li>
+            <li><a href="#who-we-are">who we are</a> <span class="subnav-divider">|</span></li>
             <li><a href="#">our principles</a> <span class="subnav-divider">|</span></li>
             <li><a href="#">our vision</a> <span class="subnav-divider">|</span></li>
             <li><a href="#">what we engage in</a> <span class="subnav-divider">|</span></li>
