--- a/partials/site-nav.hbs
+++ b/partials/site-nav.hbs
@@ -1,3 +1,4 @@
+<div class="mobile-menu">{{> "icons/mobile"}}</div>
 <nav class="site-nav">
     <div class="nav-social">
         {{#if @blog.facebook}}
