--- a/assets/built/main.css
+++ b/assets/built/main.css
@@ -54,60 +54,285 @@ table {
   border-spacing: 0;
 }
 
-body, html {
-  width: 100%;
-  height: 100%;
-  font-family: "Fira Sans Condensed", "Helvetica Neue Condensed", "Helvetica", "Sans-Serif";
-  font-weight: 400;
-  font-size: 100%;
-  background-color: #fefefe;
-  font-smooth: always;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+a {
+  background-color: transparent;
 }
 
-section {
-  width: 100%;
-  max-width: 1000px;
-  margin: 20px auto;
+a:active,
+a:hover {
+  outline: 0;
 }
 
-h1 {
-  font-weight: 900;
-  font-size: 2.4rem;
-  text-transform: uppercase;
+b,
+strong {
+  font-weight: bold;
 }
 
-h2 {
-  font-weight: 700;
-  letter-spacing: -1.5px;
-  font-size: 2rem;
-  font-family: "Zilla Slab", "Georgia", "Serif";
-}
-
-p {
-  text-align: justify;
-  font-size: 1.2rem;
-  line-height: 1.6rem;
-}
-
-i {
-  font-weight: 300;
+i,
+em,
+dfn {
   font-style: italic;
 }
 
-a, a:hover, a:visited {
-  text-decoration: none;
+small {
+  font-size: 80%;
 }
 
-.red-highlight {
-  color: #ee3532;
-  font-weight: 700;
+sub,
+sup {
+  position: relative;
+  font-size: 75%;
+  line-height: 0;
+  vertical-align: baseline;
 }
 
-/* -- temp --*/
-.featured-post {
-  margin: 0px 20px 40px;
+sup {
+  top: -0.5em;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+img {
+  border: 0;
+}
+
+svg:not(:root) {
+  overflow: hidden;
+}
+
+mark {
+  background-color: #fdffb6;
+}
+
+code,
+kbd,
+pre,
+samp {
+  font-family: monospace, monospace;
+  font-size: 1em;
+}
+
+button,
+input,
+optgroup,
+select,
+textarea {
+  margin: 0;
+  /* 3 */
+  color: inherit;
+  /* 1 */
+  font: inherit;
+  /* 2 */
+}
+
+button {
+  overflow: visible;
+  border: none;
+}
+
+button,
+select {
+  text-transform: none;
+}
+
+button,
+html input[type="button"],
+input[type="reset"],
+input[type="submit"] {
+  cursor: pointer;
+  /* 3 */
+  -webkit-appearance: button;
+  /* 2 */
+}
+
+button[disabled],
+html input[disabled] {
+  cursor: default;
+}
+
+button::-moz-focus-inner,
+input::-moz-focus-inner {
+  padding: 0;
+  border: 0;
+}
+
+input {
+  line-height: normal;
+}
+
+input:focus {
+  outline: none;
+}
+
+input[type="checkbox"],
+input[type="radio"] {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  /* 1 */
+  padding: 0;
+  /* 2 */
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  height: auto;
+}
+
+input[type="search"] {
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+  /* 2 */
+  -webkit-appearance: textfield;
+  /* 1 */
+}
+
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+legend {
+  padding: 0;
+  /* 2 */
+  border: 0;
+  /* 1 */
+}
+
+textarea {
+  overflow: auto;
+}
+
+table {
+  border-spacing: 0;
+  border-collapse: collapse;
+}
+
+td,
+th {
+  padding: 0;
+}
+
+/* ==========================================================================
+   Base styles: opinionated defaults
+   ========================================================================== */
+::-moz-selection {
+  text-shadow: none;
+}
+::selection {
+  text-shadow: none;
+}
+
+hr {
+  position: relative;
+  display: block;
+  width: 100%;
+  margin: 2.5em 0 3.5em;
+  padding: 0;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #ececec;
+}
+
+audio,
+canvas,
+iframe,
+img,
+svg,
+video {
+  vertical-align: middle;
+}
+
+fieldset {
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
+
+textarea {
+  resize: vertical;
+}
+
+p,
+ul,
+ol,
+dl,
+blockquote {
+  margin: 0 0 1.5em 0;
+}
+
+ol,
+ul {
+  padding-left: 1.3em;
+  padding-right: 1.5em;
+}
+
+ol ol,
+ul ul,
+ul ol,
+ol ul {
+  margin: 0.5em 0 1em;
+}
+
+ul {
+  list-style: disc;
+}
+
+ol {
+  list-style: decimal;
+}
+
+li {
+  margin: 0.5em 0;
+  padding-left: 0.3em;
+  line-height: 1.6em;
+}
+
+dt {
+  float: left;
+  margin: 0 20px 0 0;
+  width: 120px;
+  color: #333333;
+  font-weight: 500;
+  text-align: right;
+}
+
+dd {
+  margin: 0 0 5px 0;
+  text-align: left;
+}
+
+blockquote {
+  margin: 1.5em 0;
+  padding: 0 1.6em 0 1.6em;
+  border-left: #ee3532 0.5em solid;
+}
+
+blockquote p {
+  margin: 0.8em 0;
+  font-size: 1.2em;
+  font-weight: 300;
+}
+
+blockquote small {
+  display: inline-block;
+  margin: 0.8em 0 0.8em 1.5em;
+  font-size: 0.9em;
+  opacity: 0.8;
+}
+
+/* Quotation marks */
+blockquote small:before {
+  content: "\2014 \00A0";
+}
+
+blockquote cite {
+  font-weight: bold;
+}
+
+blockquote cite a {
+  font-weight: normal;
 }
 
 /* ---------------------------------------
@@ -1250,11 +1475,12 @@ Usage (In Ghost editor):
           align-items: center;
   height: 60px;
   border-bottom: rgba(0, 0, 0, 0.06) 1px solid;
-  background: rgba(255, 255, 255, 0.95);
+  background: rgba(0, 0, 0, 0.8);
   -webkit-transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
   transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
   -webkit-transform: translate3d(0, -120%, 0);
           transform: translate3d(0, -120%, 0);
+  color: #fefefe;
 }
 
 .floating-active {
@@ -1285,6 +1511,7 @@ Usage (In Ghost editor):
   color: #333333;
   line-height: 1.1em;
   font-weight: 700;
+  color: #fefefe;
 }
 
 .floating-header-logo a:hover {
@@ -1307,12 +1534,9 @@ Usage (In Ghost editor):
           flex: 1;
   overflow: hidden;
   margin: 0;
-  color: #2e2e2e;
-  font-size: 1.6rem;
-  line-height: 1.3em;
-  font-weight: bold;
   text-overflow: ellipsis;
   white-space: nowrap;
+  color: #fefefe;
 }
 
 .floating-header-share {
@@ -1847,8 +2071,68 @@ Usage (In Ghost editor):
   }
 }
 
-#header {
-  margin-bottom: 20px;
+body, html {
+  width: 100%;
+  height: 100%;
+  font-family: "Fira Sans Condensed", "Helvetica Neue Condensed", "Helvetica", "Sans-Serif";
+  font-weight: 400;
+  font-size: 100%;
+  background-color: #fefefe;
+  font-smooth: always;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+section {
+  width: 100%;
+  max-width: 1000px;
+  margin: 20px auto;
+}
+
+h1 {
+  font-weight: 900;
+  font-size: 2.4rem;
+  text-transform: uppercase;
+}
+
+h2 {
+  font-weight: 700;
+  letter-spacing: -1px;
+  font-size: 2rem;
+  font-family: "Zilla Slab", "Georgia", "Serif";
+}
+
+p {
+  text-align: justify;
+  font-size: 1.2rem;
+  line-height: 1.6rem;
+}
+
+i {
+  font-weight: 300;
+  font-style: italic;
+}
+
+a, a:hover, a:visited {
+  text-decoration: none;
+}
+
+.red-highlight {
+  color: #ee3532;
+  font-weight: 700;
+}
+
+.no-padding {
+  padding: 0px !important;
+}
+
+.no-margin {
+  margin: 0px !important;
+}
+
+/* -- temp --*/
+.featured-post {
+  margin: 0px 20px 40px;
 }
 
 #header .site-header {
@@ -1866,8 +2150,8 @@ Usage (In Ghost editor):
   top: 0px;
   left: 0px;
   float: left;
-  background: #000000 url("../images/logo-flag.png") no-repeat left top;
-  background-size: 100% auto;
+  background: #000000 url("../images/logo-flag.png") no-repeat top left;
+  background-size: auto 100%;
   text-indent: -99999px;
   height: 200px;
   width: 298px;
@@ -1889,6 +2173,10 @@ Usage (In Ghost editor):
   font-weight: 300;
   text-transform: uppercase;
   line-height: 1rem;
+}
+
+#header .site-header .mobile-menu {
+  display: none;
 }
 
 #header .site-header nav.site-nav {
@@ -1924,12 +2212,15 @@ Usage (In Ghost editor):
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin: 0px;
+  padding: 0px;
+  list-style: none;
 }
 
 #header .site-header nav.site-nav .nav-main .nav li {
   text-align: center;
   display: inline-block;
-  margin-left: 2.5rem;
+  margin: 0px 0px 0px 2.5rem;
 }
 
 #header .site-header nav.site-nav .nav-main .nav li a {
@@ -1951,29 +2242,31 @@ Usage (In Ghost editor):
   color: #ee3532;
 }
 
-#header .site-subnav {
+.site-subnav {
   background-color: #ececec;
   line-height: 2.35rem;
   overflow: auto;
+  margin-bottom: 20px;
 }
 
-#header .site-subnav ul.subnav {
+.site-subnav ul.subnav {
   position: relative;
   float: right;
   padding-right: 20px;
+  margin: 0px;
 }
 
-#header .site-subnav ul.subnav li {
+.site-subnav ul.subnav li {
   text-align: center;
   display: inline-block;
 }
 
-#header .site-subnav ul.subnav li a {
+.site-subnav ul.subnav li a {
   color: #333333;
   font-size: 0.9rem;
 }
 
-#header .site-subnav ul.subnav .subnav-divider {
+.site-subnav ul.subnav .subnav-divider {
   display: inline-block;
   color: #b0b0b0;
   font-size: 0.8rem;
@@ -1981,5 +2274,56 @@ Usage (In Ghost editor):
 }
 
 /* ----- RESPONSIVE STYLES ----- */
+@media screen and (max-width: 900px) {
+  html, body {
+    font-size: 75% !important;
+  }
+  #header .site-header, #header .site-header .header-logo, #header .site-header nav.site-nav {
+    height: 150px;
+  }
+  #header .site-header .header-logo {
+    width: 225px;
+  }
+}
+
+@media screen and (max-width: 699px) {
+  #header .site-header {
+    height: 70px;
+  }
+  #header .site-header .header-logo {
+    display: none;
+  }
+  #header .site-header .header-title {
+    margin: 10px;
+    padding: 0px;
+    position: relative;
+    display: inline-block;
+    float: left;
+  }
+  #header .site-header .header-title h1 {
+    font-size: 2.5rem;
+  }
+  #header .site-header .header-title h2 {
+    font-size: 1.7rem;
+  }
+  #header .site-header nav.site-nav {
+    display: none;
+  }
+  #header .site-header .mobile-menu {
+    cursor: pointer;
+    display: block;
+    position: absolute;
+    right: 10px;
+    line-height: 70px;
+  }
+  .site-subnav {
+    display: none;
+  }
+}
+
+.footer-logo {
+  text-align: center;
+  margin: 0px auto 40px auto;
+}
 
 /*# sourceMappingURL=main.css.map */
