--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -12,9 +12,12 @@ $dark-grey: #333333;
 $off-white: #fefefe;
 
 //Sizing
-$nav-height-browser: 200px;
+$header-height-browser: 200px;
+$header-height-mid: 150px;
+$header-height-mobile: 70px;
 $padding-browser: 20px;
 $margin-browser: 20px;
+$margin-mobile: 10px;
 
 //Mixins
 @mixin shadow($color) {
