--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -2,5 +2,10 @@
 // Imports all fonts & files. Not used for any actual styles.
 @import 'reset';
 @import 'variables';
+
+@import 'oldmain';
+@import 'oldscreen';
+
 @import 'global';
 @import 'header';
+@import 'footer';
