--- a/default.hbs
+++ b/default.hbs
@@ -17,22 +17,14 @@
 <body class="{{body_class}}">
 
     <div class="site-wrapper">
+        {{!-- Custom theme header with static design --}}
+        {{> "custom-header"}}
 
         {{!-- All the main content gets inserted here, index.hbs, post.hbs, etc --}}
         {{{body}}}
 
         {{!-- The footer at the very bottom of the screen --}}
-        <footer class="site-footer outer">
-            <div class="site-footer-content inner">
-                <nav class="site-footer-nav">
-                    <a href="{{@blog.url}}">Latest Posts</a>
-                    {{#if @blog.facebook}}<a href="{{facebook_url @blog.facebook}}" target="_blank">Facebook</a>{{/if}}
-                    {{#if @blog.twitter}}<a href="{{twitter_url @blog.twitter}}" target="_blank">Twitter</a>{{/if}}
-                    <a href="https://ghost.org" target="_blank">Ghost</a>
-                </nav>
-            </div>
-        </footer>
-
+        {{> "custom-footer"}}
     </div>
 
     {{!-- The big email subscribe modal content --}}
@@ -63,13 +55,12 @@
     {{/if}}
 
     {{!-- Concatenated Site Scripts --}}
-    <script type="text/javascript" src="{{asset "built/app.js"}}"></script>
+    <script type="text/javascript" src="{{asset "built/index.js"}}"></script>
 
     {{!-- The #block helper will pull in data from the #contentFor other template files. In this case, there's some JavaScript which we only want to use in post.hbs, but it needs to be included down here, after jQuery has already loaded. --}}
     {{{block "scripts"}}}
 
     {{!-- Ghost outputs important scripts and data with this tag - it should always be the very last thing before the closing body tag --}}
     {{ghost_foot}}
-
 </body>
 </html>
