--- a/error.hbs
+++ b/error.hbs
@@ -12,26 +12,18 @@ You'll notice that we *don't* use any JavsScript, or ghost_head / ghost_foot in 
     <title>{{meta_title}}</title>
     <meta name="HandheldFriendly" content="True" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="{{asset "built/screen.css"}}" />
+
+    {{!-- Stylesheets --}}
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Fira+Sans+Condensed:300,300i,400,500,900|Zilla+Slab:300,700">
+    <link rel="stylesheet" type="text/css" href="{{asset "built/main.css"}}" />
 </head>
 <body class="error-template">
     <div class="site-wrapper">
-
-        <header class="site-header outer {{#if feature_image}}" style="background-image: url({{feature_image}}){{else}}no-cover{{/if}}">
-            <div class="inner">
-                <nav class="site-nav-center">
-                    {{#if @blog.logo}}
-                        <a class="site-nav-logo" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="{{@blog.title}}" /></a>
-                    {{else}}
-                        <a class="site-nav-logo" href="{{@blog.url}}">{{@blog.title}}</a>
-                    {{/if}}
-                </nav>
-            </div>
-        </header>
+        {{!-- Custom theme header with static design --}}
+        {{> "custom-header"}}
 
         <main id="site-main" class="site-main outer" role="main">
             <div class="inner">
-
                 <section class="error-message">
                     <h1 class="error-code">{{code}}</h1>
                     <p class="error-description">{{message}}</p>
