--- a/page.hbs
+++ b/page.hbs
@@ -2,19 +2,18 @@
 {{!-- The tag above means: insert everything in this file
 into the {body} of the default.hbs template --}}
 
-{{!-- The big featured header, it uses blog cover image as a BG if available --}}
-<header class="site-header outer">
-    {{> "site-nav"}}
-</header>
 
 {{!-- Everything inside the #post tags pulls data from the post --}}
 {{#post}}
+<div class="site-subnav">
+    {{#has slug="readings"}}
+        {{!-- Include subnav if applicable for each page here --}}
+    {{/has}}
+</div>
 
 <main id="site-main" class="site-main outer" role="main">
     <div class="inner">
-
         <article class="post-full {{post_class}} {{#unless feature_image}}no-image{{/unless}}">
-
             <header class="post-full-header">
                 <h1 class="post-full-title">{{title}}</h1>
             </header>
@@ -27,20 +26,18 @@ into the {body} of the default.hbs template --}}
             <section class="post-full-content">
                 {{content}}
             </section>
-
         </article>
-
     </div>
 </main>
 
+{{> floating-header}}
+
 {{/post}}
 
-{{!-- The #contentFor helper here will send everything inside it up to the matching #block helper found in default.hbs --}}
 {{#contentFor "scripts"}}
-<script>
-$(function() {
-    var $postContent = $(".post-full-content");
-    $postContent.fitVids();
-});
-</script>
+    <script>
+        (function($) {
+            floatingHeader.update();
+        }),(jQuery);
+    </script>
 {{/contentFor}}
