--- a/partials/floating-header.hbs
+++ b/partials/floating-header.hbs
@@ -4,12 +4,15 @@
             {{#if @blog.icon}}
                 <img src="{{@blog.icon}}" alt="{{@blog.title}} icon" />
             {{/if}}
-            <span>{{@blog.title}}</span>
+            <h2><span class="red-highlight">{{@blog.title}}</span></h2>
         </a>
     </div>
-    <span class="floating-header-divider">&mdash;</span>
-    <div class="floating-header-title">{{title}}</div>
-    <div class="floating-header-share">
+    {{#if title}}
+        <span class="floating-header-divider">&mdash;</span>
+        <h2 class="floating-header-title">{{title}}</h2>
+    {{/if}}
+
+    <!-- <div class="floating-header-share">
         <div class="floating-header-share-label">Share this {{> "icons/point"}}</div>
         <a class="floating-header-share-tw" href="https://twitter.com/share?text={{encode title}}&amp;url={{url absolute="true"}}"
             onclick="window.open(this.href, 'share-twitter', 'width=550,height=235');return false;">
@@ -19,7 +22,7 @@
             onclick="window.open(this.href, 'share-facebook','width=580,height=296');return false;">
             {{> "icons/facebook"}}
         </a>
-    </div>
+    </div> -->
     <progress class="progress" value="0">
         <div class="progress-container">
             <span class="progress-bar"></span>
