--- a/assets/built/main.css
+++ b/assets/built/main.css
@@ -54,15 +54,6 @@ table {
   border-spacing: 0;
 }
 
-a {
-  background-color: transparent;
-}
-
-a:active,
-a:hover {
-  outline: 0;
-}
-
 b,
 strong {
   font-weight: bold;
@@ -259,7 +250,7 @@ ul,
 ol,
 dl,
 blockquote {
-  margin: 0 0 1.5em 0;
+  margin: 0 0 1em 0;
 }
 
 ol,
@@ -382,8 +373,6 @@ blockquote cite a {
 /* Centered content container blocks */
 .inner {
   width: 100%;
-  max-width: 640px;
-  margin: 0 auto;
 }
 
 /* Usage:
@@ -478,7 +467,7 @@ blockquote cite a {
   position: relative;
   display: block;
   padding: 25px 25px 0;
-  color: #333333;
+  color: #333333 !important;
 }
 
 .post-card-content-link:hover {
@@ -534,7 +523,6 @@ blockquote cite a {
 }
 
 .post-card-author {
-  font-size: 1.3rem;
   font-weight: 500;
   letter-spacing: 0.5px;
   text-transform: uppercase;
@@ -570,10 +558,6 @@ The first (most recent) post in the list is styled to be bigger than the others 
     -webkit-box-flex: 0;
         -ms-flex: 0 1 357px;
             flex: 0 1 357px;
-  }
-  .home-template .post-feed .post-card:nth-child(6n+1):not(.no-image) p {
-    font-size: 1.8rem;
-    line-height: 1.55em;
   }
   .home-template .post-feed .post-card:nth-child(6n+1):not(.no-image) .post-card-content-link {
     padding: 30px 40px 0;
@@ -612,10 +596,9 @@ The first (most recent) post in the list is styled to be bigger than the others 
 
 /* ^ Required to make .post-full-content:before/after z-index stacking work */
 .post-full-header {
-  max-width: 1040px;
   margin: 0 auto;
-  padding: 6vw 3vw 3vw;
-  text-align: center;
+  text-align: left;
+  padding-top: 20px;
 }
 
 @media (max-width: 500px) {
@@ -625,28 +608,7 @@ The first (most recent) post in the list is styled to be bigger than the others 
 }
 
 .post-full-meta {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  color: #333333;
-  font-size: 1.4rem;
-  font-weight: 600;
-  text-transform: uppercase;
-}
-
-.post-full-meta-date {
-  color: #333333;
-}
-
-.post-full-title {
-  margin: 0;
-  color: color(#333333 l(-5%));
+  margin-top: 5px;
 }
 
 .date-divider {
@@ -655,8 +617,8 @@ The first (most recent) post in the list is styled to be bigger than the others 
 }
 
 .post-full-image {
-  height: 800px;
-  margin: 0 -10vw -165px;
+  height: 600px;
+  margin: 0 -10vw -375px;
   background: #ececec center center;
   background-size: cover;
   border-radius: 5px;
@@ -665,7 +627,7 @@ The first (most recent) post in the list is styled to be bigger than the others 
 @media (max-width: 1170px) {
   .post-full-image {
     height: 600px;
-    margin: 0 -4vw -100px;
+    margin: 0 -4vw -375px;
     border-radius: 0;
   }
 }
@@ -679,7 +641,7 @@ The first (most recent) post in the list is styled to be bigger than the others 
 .post-full-content {
   position: relative;
   min-height: 230px;
-  margin: 0 auto;
+  margin: 20px auto;
   padding-top: 70px;
   font-family: Georgia, serif;
   font-size: 2.2rem;
@@ -689,7 +651,7 @@ The first (most recent) post in the list is styled to be bigger than the others 
 
 @media (max-width: 1170px) {
   .post-full-content {
-    padding: 5vw 7vw 0;
+    padding: 0 5%;
   }
 }
 
@@ -776,11 +738,6 @@ The first (most recent) post in the list is styled to be bigger than the others 
   margin: 0;
 }
 
-.post-template .kg-card-markdown > p:first-child {
-  font-size: 1.25em;
-  line-height: 1.5em;
-}
-
 .post-full-content a {
   color: #000;
   -webkit-box-shadow: #ee3532 0 -1px 0 inset;
@@ -794,7 +751,7 @@ The first (most recent) post in the list is styled to be bigger than the others 
 
 .post-full-content strong,
 .post-full-content em {
-  color: color(#333333 l(-5%));
+  color: #333333;
 }
 
 .post-full-content small {
@@ -809,7 +766,7 @@ The first (most recent) post in the list is styled to be bigger than the others 
 .post-full-content img,
 .post-full-content video {
   display: block;
-  max-width: 1040px;
+  max-width: 850px;
   margin: 1.5em auto;
 }
 
@@ -874,7 +831,7 @@ Usage (In Ghost editor):
   font-size: 0.8em;
   line-height: 1em;
   font-weight: 400 !important;
-  background: var(--whitegrey);
+  background: #ececec;
   border-radius: 3px;
 }
 
@@ -883,11 +840,11 @@ Usage (In Ghost editor):
   overflow-x: auto;
   margin: 1.5em 0 3em;
   padding: 20px;
-  border: color(#333333 l(-10%)) 1px solid;
-  color: var(--whitegrey);
+  border: #333333 1px solid;
+  color: #ececec;
   font-size: 1.4rem;
   line-height: 1.5em;
-  background: color(#333333 l(-3%));
+  background: #333333;
   border-radius: 5px;
 }
 
@@ -915,7 +872,7 @@ Usage (In Ghost editor):
   width: 1px;
   height: 30px;
   margin-left: -10px;
-  background: color(#ececec l(10%));
+  background: #ececec;
   -webkit-box-shadow: #fff 0 0 0 5px;
           box-shadow: #fff 0 0 0 5px;
   -webkit-transform: rotate(45deg);
@@ -1078,13 +1035,13 @@ Usage (In Ghost editor):
   letter-spacing: 0.2px;
   text-align: left;
   text-transform: uppercase;
-  background-color: color(var(--whitegrey) l(4%));
+  background-color: #ececec;
 }
 
 .post-full-content table th,
 .post-full-content table td {
   padding: 6px 12px;
-  border: color(var(--whitegrey) l(-1%) s(-5%)) 1px solid;
+  border: #ececec 1px solid;
 }
 
 /* 7.1. Subscribe Form
@@ -1092,9 +1049,9 @@ Usage (In Ghost editor):
 .subscribe-form {
   margin: 1.5em 0;
   padding: 6.5vw 7vw 7vw;
-  border: color(var(--whitegrey) l(2%)) 1px solid;
+  border: #ececec 1px solid;
   text-align: center;
-  background: color(var(--whitegrey) l(4%));
+  background: #ececec;
   border-radius: 7px;
 }
 
@@ -1139,7 +1096,7 @@ Usage (In Ghost editor):
   display: block;
   width: 100%;
   padding: 10px;
-  border: color(#ececec l(7%)) 1px solid;
+  border: #ececec 1px solid;
   color: #333333;
   font-size: 1.8rem;
   line-height: 1em;
@@ -1156,7 +1113,7 @@ Usage (In Ghost editor):
 
 .subscribe-email:focus {
   outline: 0;
-  border-color: color(#ececec l(-2%));
+  border-color: #ececec;
 }
 
 .subscribe-form button {
@@ -1473,14 +1430,15 @@ Usage (In Ghost editor):
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 60px;
-  border-bottom: rgba(0, 0, 0, 0.06) 1px solid;
-  background: rgba(0, 0, 0, 0.8);
+  height: 50px;
+  background: rgba(0, 0, 0, 0.9);
   -webkit-transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
   transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
   -webkit-transform: translate3d(0, -120%, 0);
           transform: translate3d(0, -120%, 0);
   color: #fefefe;
+  -webkit-box-shadow: 0px 0px 3px #000000;
+  box-shadow: 0px 0px 3px #000000;
 }
 
 .floating-active {
@@ -1492,40 +1450,10 @@ Usage (In Ghost editor):
 }
 
 .floating-header-logo {
-  overflow: hidden;
-  margin: 0 0 0 20px;
-  font-size: 1.6rem;
-  line-height: 1em;
-  letter-spacing: -1px;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
-.floating-header-logo a {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  color: #333333;
-  line-height: 1.1em;
-  font-weight: 700;
-  color: #fefefe;
-}
-
-.floating-header-logo a:hover {
-  text-decoration: none;
-}
-
-.floating-header-logo img {
-  max-height: 20px;
-  margin: 0 10px 0 0;
-}
-
-.floating-header-divider {
-  margin: 0 5px;
-  line-height: 1em;
+  width: 0px;
+  height: 0px;
+  border-top: 50px solid #ee3532;
+  border-right: 50px solid transparent;
 }
 
 .floating-header-title {
@@ -1537,39 +1465,31 @@ Usage (In Ghost editor):
   text-overflow: ellipsis;
   white-space: nowrap;
   color: #fefefe;
+  padding-left: 10px;
+}
+
+.floating-header-title h4 {
+  display: inline-block;
 }
 
 .floating-header-share {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding-left: 2%;
   font-size: 1.3rem;
   line-height: 1;
 }
 
-.floating-header-share a {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.floating-header-share svg {
+.floating-header-title svg {
   width: auto;
   height: 16px;
-  fill: #fff;
+  fill: #ececec;
 }
 
 .floating-header-share-label {
@@ -1597,25 +1517,28 @@ Usage (In Ghost editor):
 
 .floating-header-share-tw,
 .floating-header-share-fb {
-  display: block;
+  display: inline-block;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 60px;
-  height: 60px;
+  width: 40px;
+  height: 50px;
   color: #fff;
   line-height: 48px;
   text-align: center;
   -webkit-transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
   transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
-}
-
-.floating-header-share-tw {
-  background: #33b1ff;
+  opacity: 0.8;
+  border-right: 1px solid #222222;
+  padding-right: 3px;
 }
 
 .floating-header-share-fb {
-  background: #005e99;
+  border-left: 1px solid #222222;
+  margin-left: 15px;
+  font-size: 1rem;
+  padding-left: 3px;
+  width: 45px;
 }
 
 .progress {
@@ -2099,13 +2022,41 @@ h2 {
   font-weight: 700;
   letter-spacing: -1px;
   font-size: 2rem;
+  line-height: 2.3rem;
   font-family: "Zilla Slab", "Georgia", "Serif";
 }
 
-p {
+.post-content-block h2, .kg-card-markdown h2 {
+  margin-bottom: 10px;
+}
+
+h3 {
+  font-size: 2rem;
+}
+
+h4 {
+  font-weight: 300;
+  letter-spacing: -1px;
+  font-size: 1.3rem;
+  font-family: "Zilla Slab", "Georgia", "Serif";
+  text-transform: uppercase;
+}
+
+h5 {
+  font-size: 1.3rem;
+}
+
+h6 {
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+p, li, blockquote {
   text-align: justify;
   font-size: 1.2rem;
   line-height: 1.6rem;
+  font-weight: 300;
+  font-family: "Fira Sans Condensed", "Helvetica Neue Condensed", "Helvetica", "Sans-Serif";
 }
 
 i {
@@ -2115,6 +2066,8 @@ i {
 
 a, a:hover, a:visited {
   text-decoration: none;
+  color: #ee3532;
+  outline: 0;
 }
 
 .red-highlight {
@@ -2142,7 +2095,6 @@ a, a:hover, a:visited {
   height: 200px;
   -webkit-box-shadow: 0px 0px 3px #000000;
   box-shadow: 0px 0px 3px #000000;
-  /* ------------ NAV ------------- */
 }
 
 #header .site-header .header-logo {
@@ -2175,11 +2127,12 @@ a, a:hover, a:visited {
   line-height: 1rem;
 }
 
-#header .site-header .mobile-menu {
+/* ------------ NAV ------------- */
+.mobile-menu {
   display: none;
 }
 
-#header .site-header nav.site-nav {
+nav.site-nav {
   position: relative;
   float: right;
   clear: none;
@@ -2187,28 +2140,32 @@ a, a:hover, a:visited {
   height: 200px;
 }
 
-#header .site-header nav.site-nav .nav-social {
+nav.site-nav .nav-social {
   position: absolute;
   top: 15px;
   right: 0px;
 }
 
-#header .site-header nav.site-nav .nav-social a {
-  opacity: 0.8;
+nav.site-nav .nav-social li {
+  display: inline-block;
+  margin: 0px 0px 0px 5px;
 }
 
-#header .site-header nav.site-nav .nav-social a svg {
+nav.site-nav .nav-social li a {
+  opacity: 0.8;
+  white-space: nowrap;
+}
+
+nav.site-nav .nav-social li a svg {
   fill: #ffffff;
   height: 20px;
 }
 
-#header .site-header nav.site-nav .nav-main {
-  position: absolute;
-  bottom: 15px;
-  right: 0px;
+nav.site-nav .nav-social a.social-link-fb svg {
+  height: 15px;
 }
 
-#header .site-header nav.site-nav .nav-main .nav {
+nav.site-nav .nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2217,13 +2174,19 @@ a, a:hover, a:visited {
   list-style: none;
 }
 
-#header .site-header nav.site-nav .nav-main .nav li {
+nav.site-nav .nav-main {
+  position: absolute;
+  bottom: 15px;
+  right: 0px;
+}
+
+nav.site-nav .nav-main .nav li {
   text-align: center;
   display: inline-block;
   margin: 0px 0px 0px 2.5rem;
 }
 
-#header .site-header nav.site-nav .nav-main .nav li a {
+nav.site-nav .nav-main .nav li a {
   font-size: 1.15rem;
   font-weight: 900;
   letter-spacing: 0.4px;
@@ -2234,12 +2197,16 @@ a, a:hover, a:visited {
   white-space: nowrap;
 }
 
-#header .site-header nav.site-nav .nav-main .nav li a:hover {
+nav.site-nav .nav-main .nav li a:hover {
   color: #ee3532;
 }
 
-#header .site-header nav.site-nav .nav-main .nav li.nav-current a {
+nav.site-nav .nav-main .nav li.nav-current a {
   color: #ee3532;
+}
+
+.floating-header nav.site-nav {
+  height: 60px;
 }
 
 .site-subnav {
