--- a/index.hbs
+++ b/index.hbs
@@ -15,12 +15,16 @@ into the {body} of the default.hbs template --}}
                 </div>
             {{/foreach}}
         {{/get}}
-        {{#get "posts" filter="featured:false" as |notFeatured|}}
-            {{#foreach notFeatured}}
-                {{!-- The tag below includes the markup for each post - partials/post-card.hbs --}}
-                {{> "post-card"}}
-            {{/foreach}}
-        {{/get}}
+        <div class="inner">
+            <div class="post-feed">
+                {{#get "posts" filter="featured:false" as |notFeatured|}}
+                    {{#foreach notFeatured}}
+                        {{!-- The tag below includes the markup for each post - partials/post-card.hbs --}}
+                        {{> "post-card"}}
+                    {{/foreach}}
+                {{/get}}
+            </div>
+        </div>
     </section>
 </main>
 
