--- a/page-working-groups.hbs
+++ b/page-working-groups.hbs
@@ -4,12 +4,17 @@ into the {body} of the default.hbs template --}}
 
 {{!-- Everything inside the #post tags pulls data from the post --}}
 {{#post}}
+<div class="site-subnav">
+    {{#has slug="readings"}}
+        {{!-- Include subnav if applicable for each page here --}}
+    {{/has}}
+</div>
 
 <main id="site-main" class="site-main outer" role="main">
-    <div class="inner">
+    <section class="inner">
         <article class="post-full {{post_class}} {{#unless feature_image}}no-image{{/unless}}">
             <header class="post-full-header">
-                <h1 class="post-full-title">{{title}}</h1>
+                <h2 class="post-full-title">{{title}}</h2>
             </header>
 
             {{#if feature_image}}
@@ -21,7 +26,7 @@ into the {body} of the default.hbs template --}}
                 {{content}}
             </section>
         </article>
-    </div>
+    </section>
 </main>
 
 {{> floating-header}}
