--- a/page.hbs
+++ b/page.hbs
@@ -12,10 +12,10 @@ into the {body} of the default.hbs template --}}
 </div>
 
 <main id="site-main" class="site-main outer" role="main">
-    <div class="inner">
+    <section class="inner">
         <article class="post-full {{post_class}} {{#unless feature_image}}no-image{{/unless}}">
             <header class="post-full-header">
-                <h1 class="post-full-title">{{title}}</h1>
+                <h2 class="post-full-title">{{title}}</h2>
             </header>
 
             {{#if feature_image}}
@@ -27,7 +27,7 @@ into the {body} of the default.hbs template --}}
                 {{content}}
             </section>
         </article>
-    </div>
+    </section>
 </main>
 
 {{> floating-header}}
