--- a/partials/floating-header.hbs
+++ b/partials/floating-header.hbs
@@ -1,28 +1,25 @@
 <div class="floating-header">
-    <div class="floating-header-logo">
-        <a href="{{@blog.url}}">
-            {{#if @blog.icon}}
-                <img src="{{@blog.icon}}" alt="{{@blog.title}} icon" />
-            {{/if}}
-            <h2><span class="red-highlight">{{@blog.title}}</span></h2>
-        </a>
-    </div>
+    <div class="floating-header-logo"></div>
+
     {{#if title}}
-        <span class="floating-header-divider">&mdash;</span>
-        <h2 class="floating-header-title">{{title}}</h2>
+        <div class="floating-header-title">
+            <h4>{{title}}</h4>
+
+            <a class="floating-header-share-fb" href="https://www.facebook.com/sharer/sharer.php?u={{url absolute="true"}}"
+                onclick="window.open(this.href, 'share-facebook','width=580,height=296');return false;">{{> "icons/facebook"}}</a>
+
+            <a class="floating-header-share-tw" href="https://twitter.com/share?text={{encode @blog.title}}&nbsp;-&nbsp;{{encode title}}&amp;url={{url absolute="true"}}"
+                onclick="window.open(this.href, 'share-twitter', 'width=550,height=235');return false;">{{> "icons/twitter"}}</a>
+        </div>
     {{/if}}
 
-    <!-- <div class="floating-header-share">
-        <div class="floating-header-share-label">Share this {{> "icons/point"}}</div>
-        <a class="floating-header-share-tw" href="https://twitter.com/share?text={{encode title}}&amp;url={{url absolute="true"}}"
-            onclick="window.open(this.href, 'share-twitter', 'width=550,height=235');return false;">
-            {{> "icons/twitter"}}
-        </a>
-        <a class="floating-header-share-fb" href="https://www.facebook.com/sharer/sharer.php?u={{url absolute="true"}}"
-            onclick="window.open(this.href, 'share-facebook','width=580,height=296');return false;">
-            {{> "icons/facebook"}}
-        </a>
-    </div> -->
+    <nav class="site-nav">
+        <div class="nav-main">
+            {{#if @blog.navigation}}
+                {{navigation}}
+            {{/if}}
+        </div>
+    </nav>
     <progress class="progress" value="0">
         <div class="progress-container">
             <span class="progress-bar"></span>
