--- a/partials/site-nav.hbs
+++ b/partials/site-nav.hbs
@@ -1,20 +1,21 @@
 <div class="mobile-menu">{{> "icons/mobile"}}</div>
 <nav class="site-nav">
     <div class="nav-social">
-        {{#if @blog.facebook}}
-            <a class="social-link social-link-fb" href="{{facebook_url @blog.facebook}}" target="_blank">{{> "icons/facebook"}}</a>
-        {{/if}}
-        {{#if @blog.twitter}}
-            <a class="social-link social-link-tw" href="{{twitter_url @blog.twitter}}" target="_blank">{{> "icons/twitter"}}</a>
-        {{/if}}
+        <ul class="nav">
+            {{#if @blog.facebook}}
+                <li><a class="social-link social-link-fb" href="{{facebook_url @blog.facebook}}" target="_blank">{{> "icons/facebook"}}</a></li>
+            {{/if}}
+            {{#if @blog.twitter}}
+                <li><a class="social-link social-link-tw" href="{{twitter_url @blog.twitter}}" target="_blank">{{> "icons/twitter"}}</a></li>
+            {{/if}}
 
-        {{#if @labs.subscribers}}
-            <a class="subscribe-button" href="#subscribe">Subscribe</a>
-        {{else}}
-            <a class="rss-button" href="http://cloud.feedly.com/#subscription/feed/{{@blog.url}}/rss/" target="_blank">{{> "icons/rss"}}</a>
-        {{/if}}
+            {{#if @labs.subscribers}}
+                <li><a class="subscribe-button" href="#subscribe">Subscribe</a></li>
+            {{else}}
+                <li><a class="rss-button" href="http://cloud.feedly.com/#subscription/feed/{{@blog.url}}/rss/" target="_blank">{{> "icons/rss"}}</a></li>
+            {{/if}}
+        </ul>
     </div>
-
 
     <div class="nav-main">
         {{#if @blog.navigation}}
