--- a/post.hbs
+++ b/post.hbs
@@ -7,26 +7,25 @@ into the {body} of the default.hbs template --}}
 {{#post}}
 
 <main id="site-main" class="site-main outer" role="main">
-    <div class="inner">
+    <section class="inner">
 
         <article class="post-full {{post_class}} {{#unless feature_image}}no-image{{/unless}}">
 
-            <header class="post-full-header">
-                <section class="post-full-meta">
-                    <time class="post-full-meta-date" datetime="{{date format="YYYY-MM-DD"}}">{{date format="D MMMM YYYY"}}</time>
-                    {{#primary_tag}}
-                        <span class="date-divider">/</span> <a href="{{url}}">{{name}}</a>
-                    {{/primary_tag}}
-                </section>
-                <h1 class="post-full-title">{{title}}</h1>
-            </header>
-
             {{#if feature_image}}
-            <figure class="post-full-image" style="background-image: url({{feature_image}})">
+            <figure class="post-full-image" style="background-image: url({{feature_image}}); margin-top: -20px">
             </figure>
             {{/if}}
 
             <section class="post-full-content">
+                <div class="post-full-header">
+                    <h2 class="post-full-title">{{title}}</h2>
+                    <p class="post-full-meta">
+                        <time class="post-full-meta-date" datetime="{{date format="YYYY-MM-DD"}}">{{date format="D MMMM YYYY"}}</time>
+                        {{#primary_tag}}
+                            <span class="date-divider">/</span> <a href="{{url}}">{{name}}</a>
+                        {{/primary_tag}}
+                    </p>
+                </div>
                 {{content}}
             </section>
 
@@ -88,7 +87,7 @@ into the {body} of the default.hbs template --}}
 
         </article>
 
-    </div>
+    </section>
 </main>
 
 {{!-- Links to Previous/Next posts --}}
