--- a/partials/site-nav.hbs
+++ b/partials/site-nav.hbs
@@ -1,4 +1,4 @@
-<div class="mobile-menu">{{> "icons/mobile"}}</div>
+<div id="mobile-menu" ontouchstart="mobile.mobileMenuTouch()">{{> "icons/mobile"}}</div>
 <nav class="site-nav">
     <div class="nav-social">
         <ul class="nav">
