--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -2,7 +2,7 @@ body, html {
   width: 100%;
   height: 100%;
   font-family: $sans-font;
-  font-weight: 400;
+  font-weight: 300;
   font-size: 100%;
   background-color: $off-white;
   font-smooth: always;
@@ -23,10 +23,10 @@ h1 {
 }
 h2 {
     font-weight: 700;
-    letter-spacing: -1px;
-    font-size: 2rem;
-    line-height: 2.3rem;
+    font-size: 2.2rem;
+    line-height: 2.4rem;
     font-family: $serif-font;
+    text-transform: capitalize;
 }
 
 .post-content-block h2, .kg-card-markdown h2 {
@@ -35,6 +35,8 @@ h2 {
 
 h3 {
     font-size: 2rem;
+    font-weight: 600;
+    text-transform: capitalize;
 }
 
 h4 {
@@ -47,11 +49,15 @@ h4 {
 
 h5 {
     font-size: 1.3rem;
+    text-transform: uppercase;
+    font-weight: 500;
 }
 
 h6 {
     font-size: 1rem;
     font-weight: 600;
+    color: $border-grey;
+    text-transform: uppercase;
 }
 
 p, li, blockquote {
@@ -78,6 +84,10 @@ a, a:hover, a:visited {
     font-weight: 700;
 }
 
+.small-text {
+    font-size: 0.8rem;
+    line-height: 1.1rem;
+}
 .no-padding {
     padding: 0px !important;
 }
