--- a/page-working-groups.hbs
+++ b/page-working-groups.hbs
@@ -11,22 +11,22 @@ into the {body} of the default.hbs template --}}
 </div>
 
 <main id="site-main" class="site-main outer" role="main">
-    <section class="inner">
-        <article class="post-full {{post_class}} {{#unless feature_image}}no-image{{/unless}}">
-            <header class="post-full-header">
-                <h2 class="post-full-title">{{title}}</h2>
-            </header>
+    <div class="inner">
+        <article class="post-full {{post_class}}{{#unless feature_image}} no-image{{/unless}}">
 
             {{#if feature_image}}
-            <figure class="post-full-image" style="background-image: url({{feature_image}})">
+            <figure class="post-full-image" style="background-image: url({{feature_image}}); margin-top: -20px;">
             </figure>
             {{/if}}
 
             <section class="post-full-content">
+                <header class="post-full-header">
+                    <h1 class="post-full-title">{{title}}</h1>
+                </header>
                 {{content}}
             </section>
         </article>
-    </section>
+    </div>
 </main>
 
 {{> floating-header}}
