--- a/partials/custom-footer.hbs
+++ b/partials/custom-footer.hbs
@@ -6,5 +6,28 @@
 </div>
 
 <footer class="site-footer">
-    {{!-- Include social links here --}}
+    <nav class="site-nav">
+    <div class="nav-social">
+        <ul class="nav">
+            {{#if @blog.facebook}}
+                <li><a class="social-link social-link-fb" href="{{facebook_url @blog.facebook}}" target="_blank">{{> "icons/facebook"}}</a></li>
+            {{/if}}
+            {{#if @blog.twitter}}
+                <li><a class="social-link social-link-tw" href="{{twitter_url @blog.twitter}}" target="_blank">{{> "icons/twitter"}}</a></li>
+            {{/if}}
+
+            {{#if @labs.subscribers}}
+                <li><a class="subscribe-button" href="#subscribe">Subscribe</a></li>
+            {{else}}
+                <li><a class="rss-button" href="http://cloud.feedly.com/#subscription/feed/{{@blog.url}}/rss/" target="_blank">{{> "icons/rss"}}</a></li>
+            {{/if}}
+        </ul>
+    </div>
+
+    <div class="nav-main">
+        {{#if @blog.navigation}}
+            {{navigation}}
+        {{/if}}
+    </div>
+</nav>
 </footer>
