--- a/post.hbs
+++ b/post.hbs
@@ -9,7 +9,7 @@ into the {body} of the default.hbs template --}}
 <main id="site-main" class="site-main outer" role="main">
     <section class="inner">
 
-        <article class="post-full {{post_class}} {{#unless feature_image}}no-image{{/unless}}">
+        <article class="post-full {{post_class}}{{#unless feature_image}} no-image{{/unless}}">
 
             {{#if feature_image}}
             <figure class="post-full-image" style="background-image: url({{feature_image}}); margin-top: -20px">
@@ -18,11 +18,11 @@ into the {body} of the default.hbs template --}}
 
             <section class="post-full-content">
                 <div class="post-full-header">
-                    <h2 class="post-full-title">{{title}}</h2>
-                    <p class="post-full-meta">
+                    <h1 class="post-full-title">{{title}}</h1>
+                    <p class="post-full-meta small-text">
                         <time class="post-full-meta-date" datetime="{{date format="YYYY-MM-DD"}}">{{date format="D MMMM YYYY"}}</time>
                         {{#primary_tag}}
-                            <span class="date-divider">/</span> <a href="{{url}}">{{name}}</a>
+                            <span class="date-divider">-</span> <a href="{{url}}">{{name}}</a>
                         {{/primary_tag}}
                     </p>
                 </div>
