--- a/page-working-groups.hbs
+++ b/page-working-groups.hbs
@@ -4,11 +4,11 @@ into the {body} of the default.hbs template --}}
 
 {{!-- Everything inside the #post tags pulls data from the post --}}
 {{#post}}
-<div class="site-subnav">
+<!--<div class="site-subnav">
     {{#has slug="readings"}}
         {{!-- Include subnav if applicable for each page here --}}
     {{/has}}
-</div>
+</div>-->
 
 <main id="site-main" class="site-main outer" role="main">
     <div class="inner">
