--- a/post.hbs
+++ b/post.hbs
@@ -20,7 +20,7 @@ into the {body} of the default.hbs template --}}
                 <div class="post-full-header">
                     <h1 class="post-full-title">{{title}}</h1>
                     <p class="post-full-meta small-text">
-                        <time class="post-full-meta-date" datetime="{{date format="YYYY-MM-DD"}}">{{date format="D MMMM YYYY"}}</time>
+                        <time class="post-full-meta-date" datetime="{{date format="YYYY-MM-DD"}}">{{date format=" MMMM DD, YYYY"}}</time>
                         {{#primary_tag}}
                             <span class="date-divider">-</span> <a href="{{url}}">{{name}}</a>
                         {{/primary_tag}}
