--- a/tag-news.hbs
+++ b/tag-news.hbs
@@ -6,9 +6,16 @@
     <div class="inner">
         <div class="post-feed">
             {{#foreach posts}}
-                {{!-- The tag below includes the markup for each post - partials/post-card.hbs --}}
                 {{> "post-card"}}
             {{/foreach}}
         </div>
     </div>
 </main>
+
+{{#contentFor "scripts"}}
+    <script>
+        (function($) {
+            floatingHeader.update();
+        }),(jQuery);
+    </script>
+{{/contentFor}}
