--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -8,6 +8,7 @@ $primary-black: #000000;
 $primary-white: #ffffff;
 $light-grey: #ececec;
 $border-grey: #b0b0b0;
+$mid-grey: #666666;
 $dark-grey: #333333;
 $off-white: #fefefe;
 
@@ -25,4 +26,3 @@ $margin-mobile: 10px;
   -moz-box-shadow: 0px 0px 3px $color;
   box-shadow: 0px 0px 3px $color;
 }
-
