--- a/partials/home-subnav.hbs
+++ b/partials/home-subnav.hbs
@@ -1,7 +1,7 @@
 <ul class="subnav">
-    <li><a href="#who-we-are">who we are</a> <span class="subnav-divider">|</span></li>
-    <li><a href="#our-principles">our principles</a> <span class="subnav-divider">|</span></li>
-    <li><a href="#our-vision">our vision</a> <span class="subnav-divider">|</span></li>
-    <li><a href="#what-we-engage-in">what we engage in</a> <span class="subnav-divider">|</span></li>
-    <li><a href="#join-us">join us</a></li>
+    <li><a onClick="global.subNavScroll('whoweare')">who we are</a> <span class="subnav-divider">|</span></li>
+    <li><a onClick="global.subNavScroll('ourprinciples')">our principles</a> <span class="subnav-divider">|</span></li>
+    <li><a onClick="global.subNavScroll('ourvision')">our vision</a> <span class="subnav-divider">|</span></li>
+    <li><a onClick="global.subNavScroll('whatweengagein')">what we engage in</a> <span class="subnav-divider">|</span></li>
+    <li><a onClick="global.subNavScroll('joinus')">join us</a></li>
 </ul>
