--- a/partials/post-card.hbs
+++ b/partials/post-card.hbs
@@ -13,14 +13,14 @@
                 <h3 class="post-card-title">{{title}}</h3>
             </header>
             <section class="post-card-excerpt">
-                <p>{{excerpt words="33"}}</p>
+                <p>{{excerpt words="33"}}...</p>
             </section>
         </a>
         <footer class="post-card-meta">
             {{#if author.profile_image}}
                 <img class="author-profile-image" src="{{author.profile_image}}" alt="{{author.name}}" />
             {{/if}}
-            <span class="post-card-author">{{author}}</span>
+            <span class="post-card-author">{{author.name}}</span>
         </footer>
     </div>
 </article>
