--- a/tag.hbs
+++ b/tag.hbs
@@ -12,3 +12,11 @@
         </div>
     </div>
 </main>
+
+{{#contentFor "scripts"}}
+    <script>
+        (function($) {
+            floatingHeader.update();
+        }),(jQuery);
+    </script>
+{{/contentFor}}
