One more small catch - rose at the bottom doesn't show if not logo, updated it to use existing asset

--- a/partials/custom-footer.hbs
+++ b/partials/custom-footer.hbs
@@ -1,8 +1,6 @@
 {{!-- Rose at the bottom of all the content - the site "logo" --}}
 <div class="footer-logo">
-    {{#if @blog.logo}}
-        <img src="{{@blog.logo}}" alt="{{@blog.title}}">
-    {{/if}}
+    <img src="{{asset "images/rose.png"}}" width="150" alt="{{@blog.title}}">
 </div>
 
 <footer class="site-footer">
