--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,6 +1,7 @@
 //Fonts
 $sans-font: 'Fira Sans Condensed', 'Helvetica Neue Condensed', 'Helvetica', 'Sans-Serif';
 $serif-font: 'Zilla Slab', 'Georgia', 'Serif';
+$copy-font-size: 1.3rem;
 
 //Colors
 $primary-red: #ee3532;
