Update Pamphlets tag description
As requested by the Publishing WG

--- a/tag-pamphlets.hbs
+++ b/tag-pamphlets.hbs
@@ -6,13 +6,12 @@
     <section class="inner">
         <h2>Pamphlets</h2>
         <p>
-          One of the initiatives the Libertarian Socialist Caucus is most proud of is our DSA-LSC Pamphlet Program. In the interests of expanding discussion and debate within the DSA, we have offered to lay out and publish Caucus members’ opinions in pamphlets that can both be distributed online in PDF form or printed and stapled into booklets that can be disseminated in person.
+          One of the initiatives the Libertarian Socialist Caucus is most proud of is our DSA-LSC Pamphlet Program. In the interests of expanding discussion and debate within the DSA, we have offered to publish Caucus members’ opinions in pamphlets that can be distributed online in PDF form.
         </p><p>
 Unless otherwise stated, these pamphlets do not represent official positions of the Libertarian Socialist Caucus arrived at via consensus; rather, they represent solely the views of the author(s).
         </p><p>
-In the spirit of the long anarchist and socialist tradition of agitation propaganda, we encourage everyone to spread those pamphlets they agree with far and wide in order that the views expressed in them can change the conversation within DSA.
+PDFs for printing are available upon request.
         </p><p>
-For instructions on how to fold and staple a bi-fold pamphlet, please see <a href="https://www.wikihow.com/Staple-a-Booklet" title="staple a booklet">here</a> and <a href="https://en.wikibooks.org/wiki/Zine_Making/Putting_pages_together" title="Putting Zine Pages Together">here</a>. And have a look at these instructions on <a href="https://www.wikihow.com/Fold-Paper-for-Tri-Fold-Brochures" title="how to fold a trifold">how to fold a trifold pamphlet</a>.
         </p>
         <div class="post-feed">
             {{#foreach posts}}
